2005-04-21  Albert Chu  <chu11@llnl.gov>

	* src/libcerebro/cerebro_error.h, src/libcerebro/cerebro_error.c:
	New files.

	* src/cerebrod/cerebrod_error.h, src/cerebrod/cerebrod_error.c:
	Removed files.
	
	Reworked error output based on new cerebro_error library API.

	Code cleanup throughout.

	Added mapping to cerebrod and modules.
	
2005-04-20  Albert Chu  <chu11@llnl.gov>

	Partitioned clusterlist and config modules into separate dir.
	Major Changes throughout.
	
2005-04-20  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_clusterlist_gendersllnl.c
	(gendersllnl_clusterlist_init): Added genders indexing.

	* config/ac_gendersllnl.m4: Check for genders indexing.

	* src/libcommon/Makefile.am: Put libwrappers and libcommon back
	into just libcommon.

	* src/cerebrod/Makefile.am,
	src/cerebrod/cerebrod_clusterlist_gendersllnl.c,
	src/cerebrod/cerebrod_clusterlist_genders.c,
	src/cerebrod/cerebrod_clusterlist_hostsfile.c,
	src/cerebrod/cerebrod_clusterlist_none.c,
	src/cerebrod/cerebrod_clusterlist_util.h,
	src/cerebrod/cerebrod_clusterlist_utilc,
	src/cerebrod/cerebrod_clusterlist_genders_util.h,
	src/cerebrod/cerebrod_clusterlist_genders_util.c: Remove symbols
	exporting, force all modules to hae the symbols they require.
	Made appropriate changes to support this.

2005-04-01  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_clusterlist_genders.c
	(genders_clusterlist_node_in_cluster),
	src/cerebrod/cerebrod_clusterlist_gendersllnl.c
	(gendersllnl_clusterlist_get_nodename,
	gendersllnl_clusterlist_node_in_cluster): Use buffer instead of
	strdup for shortening the nodename.
	
2005-03-31  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/Makefile.am: modulelib dir based on module dir
	determined in autoconf.
	
2005-03-30  Albert Chu  <chu11@llnl.gov>

	* Minor code cleanup throughout

	* src/cerebrod/cerebrod_updown.c (cerebrod_updown_update_data):
	Fix race condition.

	* configure.ac, src/libcerebro/Makefile.am: Add library
	versioning.
