@@ -23,3 +23,5 @@
 - maps confine only "cerebro_" instead of "cerebro*"
 
 - code review to reduce memory footprint
+
+- init/cleanup for config modules
