@@ -1,9 +1,9 @@
 /*****************************************************************************\
- *  $Id: cerebrod_config_module.h,v 1.1 2005-03-24 01:29:21 achu Exp $
+ *  $Id: cerebro_config_module.h,v 1.3 2005-04-22 18:38:02 achu Exp $
 \*****************************************************************************/
 
-#ifndef _CEREBROD_CONFIG_MODULE_H
-#define _CEREBROD_CONFIG_MODULE_H
+#ifndef _CEREBRO_CONFIG_MODULE_H
+#define _CEREBRO_CONFIG_MODULE_H
 
 /*  
  * struct cerebrod_module_config
@@ -29,25 +29,25 @@ struct cerebrod_module_config
 };
 
 /*
- * Cerebrod_config_load_default
+ * Cerebro_config_load_cerebrod_default
  *
  * function prototype for config module function to alter default
- * configuration values
+ * configuration values for the cerebrod daemon
  *
  * Returns 0 on success, -1 on error
  */
-typedef int (*Cerebrod_config_load_default)(struct cerebrod_module_config *conf);
+typedef int (*Cerebro_config_load_cerebrod_default)(struct cerebrod_module_config *conf);
 
 /*
- * struct cerebrod_config_module_info 
+ * struct cerebro_config_module_info 
  * 
  * contains config module information and operations.  Required to be
  * defined in each config module.
  */
-struct cerebrod_config_module_info
+struct cerebro_config_module_info
 {
   char *config_module_name;
-  Cerebrod_config_load_default load_default;
+  Cerebro_config_load_cerebrod_default load_cerebrod_default;
 };
 
-#endif /* _CEREBROD_CONFIG_MODULE_H */
+#endif /* _CEREBRO_CONFIG_MODULE_H */
